[package]
name = "service-api"
version = "0.0.1"
authors = ["cheeleong"]

[dependencies]
env_logger = "0.5"
log = "0.4"
actix = "0.5"
actix-web = "0.6"

chrono = { version = "0.4", features = ["serde"] }
listenfd = "0.3"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

r2d2 = "*"
r2d2_sqlite = "*"
r2d2_postgres = "*"
